[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/npc_actor_sprites/untotern/UNTO UNDEAD PRISON SPHERE SPRITE.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/npc_actor_sprites/untotern/UNTO UNDEAD FIVE CHARACTERS SPRITES.png" type="Texture" id=2]
[ext_resource path="res://src/npc_actors/unto npc/BeatriceNPC.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/dialogue box test.PNG" type="Texture" id=4]
[ext_resource path="res://assets/font_test.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sprites/level_prefab_sprites/unto prefab sprites/UntoYellowTeethPlat sprite.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 1260, 0, 315, 410 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 1260, 410, 315, 410 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "captured",
"speed": 0.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": false,
"name": "free",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 152, 172 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 204, 185 )

[sub_resource type="Animation" id=7]
resource_name = "RESET"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "captured" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/TalkToArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FreeMe/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UntoUndeadPrisonSphereSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "free"
tracks/0/type = "value"
tracks/0/path = NodePath("UntoUndeadPrisonSphereSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FreeMe/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/TalkToArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "captured", "free" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KinematicBody2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 373 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "send_a_signal"
} ]
}

[node name="MarcusNPC" type="Node2D"]
script = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 4 )
animation = "captured"

[node name="TalkToArea" type="Area2D" parent="KinematicBody2D"]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/TalkToArea"]
position = Vector2( 0, 20 )
shape = SubResource( 6 )
disabled = true

[node name="UntoUndeadPrisonSphereSprite" type="Sprite" parent="."]
position = Vector2( -2, 12 )
texture = ExtResource( 1 )

[node name="FreeMe" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="FreeMe"]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/free = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 480.0
margin_right = 1018.0
margin_bottom = 593.0
texture = ExtResource( 4 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Dialouge" type="Label" parent="CanvasLayer/NinePatchRect"]
margin_left = 6.0
margin_top = 5.0
margin_right = 1007.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 5 )
text = "BEATRICE_NPC_TALK"

[node name="NinePatchRect2" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 452.0
margin_right = 190.0
margin_bottom = 476.0
texture = ExtResource( 4 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 7

[node name="Name" type="Label" parent="CanvasLayer/NinePatchRect2"]
margin_left = 6.0
margin_top = 5.0
margin_right = 187.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "Marcus Conorly"

[node name="UntoYellowTeethPlatSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 18, 605 )
texture = ExtResource( 6 )

[connection signal="body_entered" from="KinematicBody2D/TalkToArea" to="." method="_on_TalkToArea_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/TalkToArea" to="." method="_on_TalkToArea_body_exited"]
[connection signal="area_entered" from="FreeMe" to="." method="_on_FreeMe_area_entered"]
